[package]
name = "network"
version = "0.1.0"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4.2"
rocket_cors = "0.5.0"
reqwest = "0.9.20"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]