[package]
name = "bcs_network"
version = "0.3.0"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"
description = "Brewery Control System networking crate for Navasota Brewing Company"
homepage      = "https://github.com/NavasotaBrewing/network"
repository    = "https://github.com/NavasotaBrewing/network"
documentation = "https://github.com/NavasotaBrewing/network"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4.2"
rocket_cors = "0.5.0"
reqwest = "0.9.20"
# brewdrivers = "*"

[dependencies.brewdrivers]
version = "0.6.0"
features = ["network"]
# default-features = false
optional = true

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]


[features]
default = []
rtu = ["brewdrivers"]