[package]
name = "bcs_network"
version = "0.3.0"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"
description = "Brewery Control System networking crate for Navasota Brewing Company"
homepage      = "https://github.com/NavasotaBrewing/network"
repository    = "https://github.com/NavasotaBrewing/network"
documentation = "https://github.com/NavasotaBrewing/network"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
# We need these older version for tokio 0.2 compatibility with brewdrivers
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }

[dependencies.brewdrivers]
version = "0.8.0"
features = ["network"]
# default-features = false
optional = true

[dev-dependencies]
serial_test = "*"

[features]
default = []
rtu = ["brewdrivers"]